--- a/day 5/index.html
+++ b/day 5/index.html
@@ -11,9 +11,8 @@
 
 <body>
 
-	<section class="bg">
-		<div class="loading-text">0%</div>
-	</section>
+	<section class="bg"></section>
+	<div class="loading-text">0%</div>
 
 
 
