vote and other js code was writed

--- a/day 18/movie-api/index.html
+++ b/day 18/movie-api/index.html
@@ -16,52 +16,7 @@
     </form>
   </header>
 
-  <main id="main">
-    <div class="movie">
-      <img
-        src="https://images.unsplash.com/photo-1573339886303-e2ee2fcad317?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80" />
-      <div class="movie-info">
-        <h3>Movie Title</h3>
-        <span class="green">9.8</span>
-      </div>
-      <div class="overview">
-        <h3>Overview</h3>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat, dolorem ratione quas incidunt nisi repellat
-        veritatis, modi similique blanditiis quibusdam minus, quasi porro exercitationem qui repudiandae officia
-        nesciunt est quidem?
-      </div>
-    </div>
-
-    <div class="movie">
-      <img
-        src="https://images.unsplash.com/photo-1573339886303-e2ee2fcad317?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80" />
-      <div class="movie-info">
-        <h3>Movie Title</h3>
-        <span class="green">9.8</span>
-      </div>
-      <div class="overview">
-        <h3>Overview</h3>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat, dolorem ratione quas incidunt nisi repellat
-        veritatis, modi similique blanditiis quibusdam minus, quasi porro exercitationem qui repudiandae officia
-        nesciunt est quidem?
-      </div>
-    </div>
-
-    <div class="movie">
-      <img
-        src="https://images.unsplash.com/photo-1573339886303-e2ee2fcad317?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80" />
-      <div class="movie-info">
-        <h3>Movie Title</h3>
-        <span class="red">3.8</span>
-      </div>
-      <div class="overview">
-        <h3>Overview</h3>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat, dolorem ratione quas incidunt nisi repellat
-        veritatis, modi similique blanditiis quibusdam minus, quasi porro exercitationem qui repudiandae officia
-        nesciunt est quidem?
-      </div>
-    </div>
-  </main>
+  <main id="main"></main>
 
 
 
