--- a/day 25/index.html
+++ b/day 25/index.html
@@ -11,17 +11,16 @@
 
 <body>
 	<div class="card">
-		<div class="card-header animated-bg" id="heder">
-			<img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80"
-				alt="" />
+		<div class="card-header animated-bg" id="header">
+			&nbsp;
 		</div>
 
 		<div class="card-content">
 			<h3 class="card-title animated-bg animated-bg-text" id="title">
-				Lorem ipsum dolor sit amet.
+				&nbsp;
 			</h3>
 			<p class="card-excerpt" id="excerpt">
-				Lorem ipsum, dolor sit amet consectetur adipisicing elit. In deserunt maxime voluptatum
+				&nbsp;
 				<span class="animated-bg animated-bg-text">
 					&nbsp;
 				</span>
@@ -35,18 +34,18 @@
 
 			<div class="author">
 				<div class="profile-img animated-bg" id="profile_img">
-					<img src="http://randomuser.me/api/portraits/men/45.jpg" alt="" />
+					&nbsp;
 				</div>
 				<div class="author-info">
 					<strong class="author-name animated-bg animated-bg-text" id="name">
-						John Doe
+						&nbsp;
 					</strong>
 					<small class="date animated-bg animated-bg-text" id="date">
-						Oct 08, 2020
+						&nbsp;
 					</small>
 				</div>
 			</div>
-			
+
 		</div>
 
 	</div>
