--- a/day 26/index.html
+++ b/day 26/index.html
@@ -16,7 +16,7 @@
         <a href="#">Sticky Nav</a>
       </h1>
       <ul>
-        <li><a href="#" class="active">Home</a></li>
+        <li><a href="#" class="current">Home</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Contact Us</a></li>
