--- a/day 28/index.html
+++ b/day 28/index.html
@@ -2,48 +2,27 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
-	<title>Github Profiles</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Github Profiles</title>
 </head>
 
 <body>
-	<form class="user-form" id="form">
-		<input type="text" id="search" placeholder="Search a Github User" />
-	</form>
-	<main class="main">
-		<div class="card">
-			<div>
-				<img src="https://randomuser.me/api/portraits/men/30.jpg" alt="avatar" class="avatar" />
-			</div>
-			<div class="user-info">
-				<h2>John Doe</h2>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis corporis cupiditate labore quod sunt
-					magnam.
-				</p>
-				<ul>
-					<li>100 <strong>Followers</strong></li>
-					<li>1000 <strong>Following</strong></li>
-					<li>10 <strong>Repos</strong></li>
-				</ul>
-
-        <div id="repos">
-          <a href="#" class="repo">Repo 1</a>
-          <a href="#" class="repo">Repo 2</a>
-          <a href="#" class="repo">Repo 3</a>
-        </div>
-			</div>
-		</div>
-	</main>
+  <form class="user-form" id="form">
+    <input type="text" id="search" placeholder="Search a Github User" />
+  </form>
+  <main id="main"></main>
 
 
 
 
 
-
-	<script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js"
+    integrity="sha512-aoTNnqZcT8B4AmeCFmiSnDlc4Nj/KPaZyB5G7JnOnUEkdNpCZs1LCankiYi01sLTyWy+m2P+W4XM+BuQ3Q4/Dg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
