--- a/day 33/index.html
+++ b/day 33/index.html
@@ -18,17 +18,7 @@
     <i class="fas fa-plus"></i> Add Note
   </button>
 
-  <div class="note">
-
-  </div>
-
-
-
-
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/9.0.3/marked.min.js"
-    integrity="sha512-lYRvlgmxv7o+vp/Gmo3p4qLML4csV0loGFy8cP2vpMSwV4F65BTq6LUZyq5zlV5s/LB0KkdGhd/tnMCmjWardA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/9.0.3/marked.min.js"></script>
   <script src="script.js"></script>
 </body>
 
